-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: proton-c-0.18.0
-
Component/s: proton-c
-
Labels:None
Run the send examples code with an invalid hostname like shown in the following -
[gmurthy@localhost build]$ pwd /home/gmurthy/opensource/qpid-proton/build [gmurthy@localhost build]$ [gmurthy@localhost build]$ [gmurthy@localhost build]$ examples/c/send nosuchhost PN_TRANSPORT_CLOSED: proton:io: No address associated with hostname - connect to nosuchhost:5672 epoll proactor failure in /home/gmurthy/opensource/qpid-proton/proton-c/src/proactor/epoll.c:648: "arming polled file descriptor": No such file or directory Aborted (core dumped) [gmurthy@localhost build]$
The proactor code coredumps.
- Blocked
-
DISPATCH-826 Specifying an invalid host on the connector crashes the router
-
- Closed
-
- breaks
-
DISPATCH-826 Specifying an invalid host on the connector crashes the router
-
- Closed
-
- duplicates
-
PROTON-1552 Epoll proactor example crash when given invalid hostname
-
- Closed
-
- is cloned by
-
PROTON-1964 [c] pn_proactor_wait() can return empty event batches.
-
- Open
-