PROTON-1586: c proactor example clients core dump with bad host

Fixed crash: move timer rearm logic to after check for connection closed,
so timer is not rearmed for a closed connection.

Fixed events after PN_TRANSPORT_CLOSE